Fix revisi part 2
